fix: max height on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -256,14 +256,12 @@
 }
 
 @media (max-width: 768px) {
+  .fog {
+    max-height: 710px;
+  }
   .fog-img-first,
   .fog-img-second {
-    background-size: 30%;
-    background-position: center;
-  }
-
-  .absolute-bg {
-    background-size: 300%;
+    background-size: 150%;
     background-position: center;
   }
 }
